# survey_adoption_by_employees

./: .gitignore  README.md  paper.ipynb  pyproject.toml  ruff.toml
src/: __init__.py  main.ipynb
src/addons/: etlAiAdoption.py
src/data/: README.md  ai_adoption_2024.csv  cl_ai_adoption_2024.csv  data.csv
