[project]
name = "paris1-iae-ai-adoption-by-employees"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "numpy>=1.26.4",
    "pandas>=2.2.2",
    "ipykernel>=6.29.4",
    "matplotlib>=3.9.0",
    "seaborn>=0.13.2",
    "scipy>=1.13.1",
    "plotly>=5.22.0",
    "nbformat>=5.10.4",
]
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src"]
