[project]
name = "paris1-iae-ai-adoption-by-employees"
version = "0.4.0"
description = "Data set and visualization for our research project at iae paris sorbonne "
dependencies = [
    "numpy>=1.26.4",
    "pandas>=2.2.2",
    "ipykernel>=6.29.4",
    "matplotlib>=3.9.0",
    "seaborn>=0.13.2",
    "plotly>=5.22.0",
    "nbformat>=5.10.4",
    "squarify>=0.4.3",
    "pywaffle>=1.1.0",
]
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src"]
